# st2d

./: README.md  setup.cfg  setup.py
docs/: .buildinfo  .gitignore  acsf.html  changelog.html  chebyshev.html  examples.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: acsf.doctree  changelog.doctree  chebyshev.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree
docs/_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt
docs_source/: README.md  acsf.rst  chebyshev.rst  conf.py  examples.rst  make.bat
example/data_poscar/: POSCAR_Sr2Ti6O13  POSCAR_Sr2TiO4  POSCAR_Sr3Ti2O7  POSCAR_SrTi11O20  POSCAR_SrTiO3
example/generate_acsf/: input.yaml  params_Ti  params_ang_4  params_rad_2s  run.py  str_list
example/generate_acsf/data/: data1.pickle  data2.pickle  data3.pickle  data4.pickle  data5.pickle
example/generate_chebyshev/: input.yaml  params_O  pickle_list  run.py
example/generate_chebyshev/data/: data1  data1.pickle  data2.pickle  data3.pickle  data4.pickle  data5.pickle  pickle_to_txt.py
st2d/descriptors/: acsf.py  basis.py  chebyshev.py  descriptor.py
st2d/lib/: calculate_chebyshev.cpp  calculate_chebyshev.h  calculate_sf.cpp  calculate_sf.h  lib_builder.py
st2d/libs/: calculate_chebyshev.cpp  calculate_sf.cpp
st2d/utils/: mpiclass.py
