[metadata]
name = st2d
version = attr: st2d.__version__
description = A package for generating descriptors from atomic structures.
license_files = LICENSE.txt

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ase >= 3.22.0
    numpy
    pyYaml >= 3.10
    cffi >= 1.0.0
setup_requires = cffi >= 1.0.0
include_package_data = True

[options.packages.find]
exclude =
    examples
    docs

[options.package_data]
* = *.cpp, *.h
